--- a/index.css
+++ b/index.css
@@ -9,4 +9,22 @@
   overflow: hidden;
   text-align: center;
   font-family: Tahoma;
+  color: white;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
+}
+
+#queueList {
+  overflow: hidden;
+  text-align: center;
+  font-family: Tahoma;
+  color: white;
+  text-shadow:
+  -1px -1px 0 #000,
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
 }
